Add star system icons and UI components for orbiting system feature
- Updated pubspec.yaml to include new SVG assets for star system icons.
- Added SVG files for 'name_on', 'name_off', 'orbit_on', 'orbit_off', 'select_on', and 'select_off' icons.
- Implemented UiLayer to manage the main UI for the orbiting system, including a side menu and contact section.
- Created ContactSection widget for user interaction.
- Developed SideMenu widget to toggle visibility of orbit lines, planet names, and selection indicators.
- Introduced OrbitLayer to visualize orbits of celestial bodies with custom painting.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ flutter:
     - assets/images/
     - assets/images/raquel/
     - assets/images/svg/
+    - assets/images/svg/star_system_icons/
     - assets/fonts/
 
   fonts:
