feat: Add contact icons and simulation speed slider to UI
- Added new SVG assets for contact icons (email, GitHub, LinkedIn, phone).
- Updated Assets class to include new SVG paths for contact icons.
- Introduced SimulationSpeedSlider widget for adjusting simulation speed.
- Enhanced ContactSection with animations and toggle functionality.
- Updated UI layer to integrate the new SimulationSpeedSlider and manage visibility based on user interaction.
- Refactored StarSystemConfig to include showContact property for UI state management.
- Updated pubspec.yaml to include new asset paths for contact icons.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ flutter:
     - assets/images/raquel/
     - assets/images/svg/
     - assets/images/svg/star_system_icons/
+    - assets/images/svg/contact_icons/
     - assets/fonts/
 
   fonts:
