--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_formy: ^0.4.2
   flutter_svg: ^2.1.0
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_test:
