feat: Add new SVG icons for mouse and touch interactions, implement reveal widget feature, and enhance scroll section with smooth scrolling and visibility detection
- Added SVG icons: select_body_mouse, zoom_camera_mouse, move_camera_touch, select_body_touch, and zoom_camera_touch.
- Implemented RevealScope and AnimatedRevealItem for revealing widgets on scroll.
- Created RevealItem for individual revealable items.
- Developed HardSkills and SoftSkills widgets to display technical and behavioral skills.
- Introduced OffsetFadeAnimation for smooth transitions between widgets.
- Created SectionContainer and SectionDivider for better layout organization.
- Implemented SmoothScroll for enhanced scrolling experience.
- Added TutorialModal for user guidance with interactive icons.
- Developed Competence widget for displaying skill competencies.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,11 @@ flutter:
 
   assets:
     - assets/images/
-    - assets/images/raquel/
     - assets/images/svg/
     - assets/images/svg/star_system_icons/
     - assets/images/svg/contact_icons/
+    - assets/images/svg/mouse_icons/
+    - assets/images/svg/touch_icons/
     - assets/fonts/
 
   fonts:
